Fixed login() on app.py. Made likes icon/link have a z-index of 1 in .html templates and .css. Started test_user_views but didn't get anywhere.

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -195,7 +195,9 @@ nav + .container {
 .message-area {
   margin-left: 10px;
 }
-
+#likes-container {
+  z-index: 1;
+}
 #warbler-hero {
   height: 360px;
   margin-top: -16px;
